src/test/deca/codegen/valid/SansObjet/Cast.deca
// Description:
//    Casting a during a declaration
//
// Results:
//     33
//
// History:
//    created on 16/01/2022

{
    int x = 33;
    float y ;
    y = (float) (x);
    print(y);
}
